[package]
name = "rusty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.10.8", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "voice"] }
dotenv = "0.15.0"